syntax = "proto2";
import "goby/protobuf/option_extensions.proto";
import "dccl/option_extensions.proto";
import "goby/test/acomms/dccl3/header.proto";

package goby.test.acomms.protobuf;

message GobyMessage
{
    option (dccl.msg).id = 4;
    option (dccl.msg).max_bytes = 32;
    option (dccl.msg).codec_version = 3;

    required string telegram = 1 [(dccl.field).max_length = 10];
    required Header header = 2 [(dccl.field).in_head = true];
}
